fix overflow bug

--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -5,6 +5,7 @@
     border-radius: 10px;
     box-shadow: inset -5px -5px 5px 0px rgba(0, 0, 0, 0.2),
         inset 5px 5px 5px 0px rgba(255, 255, 255, 0.5);
+    overflow: hidden;
 }
 
 .hiddenContentContainer.open {
